@@ -4,7 +4,7 @@ Operators
 
 Operators in Cypher are of three different varieties - mathematical, equality and relationships.
 
-The mathematical operators are `+`, `-`, `*`, `/` and `%`. Of these, only the plus-sign works on strings.
+The mathematical operators are `+`, `-`, `*`, `/` and `%`. Of these, only the plus-sign works on strings and collections.
 
 The equality operators are `=`, `<>`, `<`, `>`, `<=`, `>=`.
 
